--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: nswaswaJim bike and hike
+description: Pics and vids from bikes and hikes
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://nswaswaJim.github.io/oahuv1
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
