--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ oahuv1.code-workspace
 /home/jim/gitbox/oahuv1/_sub/XyGrib_Linux_Online_Installer_v1.2.6
 /home/jim/gitbox/oahuv1/_sub/XyGrib_Linux_Online_Installer_v1.2.6.tgz
 /home/jim/gitbox/oahuv1/_sub/sailmail
+/home/jim/gitbox/oahuv1/_sub/
